--- a/website/index.html
+++ b/website/index.html
@@ -206,7 +206,7 @@ My main motivation was the technical challenge.
         <td><a href="/samples/pdfzip/poc6/hexinator.pdf">hexinator.pdf</a></td>
         <td><a href="/samples/pdfzip/poc6/eicar.zip">eicar.zip</a>&nbsp;(<a href="https://www.virustotal.com/#/file/2174e17e6b03bb398666c128e6ab0a27d4ad6f7d7922127fe828e07aa94ab79d/detection">scan virustotal.com</a>)</td>
         <td>pdfzip</td>
-        <td><a href="/samples/pdfzip/poc6/polyglot.pdf">polyglot.pdf</a>&nbsp;(<a href="https://www.virustotal.com/#/file/883d08efc14e0cacc9a260d84fdef285b383cc9a9125366dfb0bf676ddeb0f98/detection">scan virustotal.com</a>)</td>
+        <td><a href="/samples/pdfzip/poc6/polyglot.pdf">polyglot.pdf</a>&nbsp;(<a href="https://www.virustotal.com/#/file/f6fef31e3b03164bb3bdf35af0521f9fc0c518a9e0f1aa9f8b60ac936201591a/detection">scan virustotal.com</a>)</td>
         <td>PDF/ZIP polyglot with Eicar test in Zip - 2.9 Mo</td>
     </tr>
     </table>
@@ -233,14 +233,16 @@ optional arguments:
   --pdffile PDFFILE     PDF input file
   --zipfile ZIPFILE     ZIP input file
   --verbose {none,error,info,debug}
-                        Verbosity level  (default: debug)
+                        Verbosity level  (default: info)
 
 TruePolyglot v1.3
 </pre>
 
     <h2>Code</h2>
 
-<a href="https://git.hackade.org/truepolyglot.git/">Project Git repository</a>
+<pre>
+git clone <a href="https://git.hackade.org/truepolyglot.git/">https://git.hackade.org/truepolyglot.git/</a>
+</pre>
 
     <h2>Contact</h2>
 On <a href="https://webchat.freenode.net/">IRC Freenode</a> my nickname is hackade or by mail at <a href="mailtp:truepolyglot@hackade.org">truepolyglot@hackade.org</a>.
